아이폰용 크롬 여백 표시 오류 수정

--- a/1.html
+++ b/1.html
@@ -31,7 +31,7 @@
     <p class="menu_h1" onclick="go('covid')">부록<br/>코로나19 대응</p>
       <br/>
     <span class="share_down">공유하기</span><br/><a href="https://www.addtoany.com/add_to/twitter?linkurl=http%3A%2F%2Fiawp.kr%2Findex.html" target="_blank"><img src="common/img/icon_tw.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/facebook?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_fb.jpg"></a> &nbsp;<a href="https://story.kakao.com/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_ks.jpg"></a> &nbsp;<a href="http://blog.naver.com/openapi/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_nv.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/linkedin?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_li.jpg"></a><br/><br/>
-    <span class="share_down">백서</span><br/><a href="./common/2020_iawp_v01.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
+    <span class="share_down">백서</span><br/><a href="./common/2020_iawp_v02.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
   </div>
   <div id="content"><div class="section1 content_menu"><div class="blue_bar"></div><p class="content_h1">제1장 설립</p><p class="content_h1_title">이노베이션 아카데미(IA)</p>
  <p class="content_h2">1. 정부단계</p><p class="content_h3">1) 추진 배경</p><p class="content_h4"> ο 세 가지 배경</p>2018년 당시, 정부가 이노베이션 아카데미를 설립하고자 하는 배경은 크게 세가지였다.
@@ -77,7 +77,7 @@
 
 셋째, 무한한 잠재력을 끌어올릴 수 있는 도전적인 교육과정 개발이다. 무엇보다 기존의 강의, 실습, 멘토링 수준의 교육방식을 넘어 누구도 도전해 보지 못한 혁신적이고 창의적인 소프트웨어 교육 시스템에 대한 개발 기대감이다. 기업과의 프로젝트(Project Based Learning) 및 교수 없이 학생들끼리 서로 배우고(Peer to Peer) 새로운 것을 만드는 혁신교육 과정 등의 획기적인 교육프로그램 운영이 필요하다.
 
-넷째, 전 산업을 소프트웨어 개발자 생태계에 포함시키기 위한 프로그램 개발이다. 국내 기업들은 테크-HR(TechHR)과 Dev-Rel(Developer Relations) 역량의 제고가 필요하다. 현재 소프트웨어 개발자 생태계의 일원으로 존재하지 않은 기업의 경우, 소프트웨어 인력 채용이 매우 어려운 상황으로 이들 기업을 소프트웨어 개발자 인력 생태계에 편입시키기 위한 방안이 시급하다. 또한 잠재력 있는 개발자들과 소통 및 기술적인 활동 장려, 개발 방법론 정립 등 소프트웨어 개발자들이 선호하는 기업으로 바꾸기 위한 방안 제시가 있어야 한다. 특히 소프트웨어 일자리 창출 능력이 높은 전통적인 제조업 기반 중견 기업에 대한 소프트웨어 역량, 소프트웨어 생태계 일원으로서 존재감을 갖게 할 구체적인 액션 아이템에 대한 제시가 필요하다.
+넷째, 전 산업을 소프트웨어 개발자 생태계에 포함시키기 위한 프로그램 개발이다. 국내 기업들은 테크-HR(TechHR)과 DevRel(Developer Relations) 역량의 제고가 필요하다. 현재 소프트웨어 개발자 생태계의 일원으로 존재하지 않은 기업의 경우, 소프트웨어 인력 채용이 매우 어려운 상황으로 이들 기업을 소프트웨어 개발자 인력 생태계에 편입시키기 위한 방안이 시급하다. 또한 잠재력 있는 개발자들과 소통 및 기술적인 활동 장려, 개발 방법론 정립 등 소프트웨어 개발자들이 선호하는 기업으로 바꾸기 위한 방안 제시가 있어야 한다. 특히 소프트웨어 일자리 창출 능력이 높은 전통적인 제조업 기반 중견 기업에 대한 소프트웨어 역량, 소프트웨어 생태계 일원으로서 존재감을 갖게 할 구체적인 액션 아이템에 대한 제시가 필요하다.
 
 다섯째, 혁신성장을 이끌 수 있는 창업지원 추진이다. 글로벌 대학과 기업이 공동 산학협력 프로젝트 추진 등으로 창업기업 배출에 대한 기대 효과이다. 글로벌 대학과 ICT기업 등이 공동 산학협력 프로젝트를 수행하면서 최신 소프트웨어 기술 및 프로젝트 관련 기술 등의 학습으로 창업기업을 배출하고, 365일 24시간 개방된 공간에서 학생들 스스로 문제를 찾고 해결하는 프로젝트를 통해서도 창업기업을 배출하는 것이다. 아울러 국내외 창업 지원 및 인큐베이팅 프로그램과의 협력과 지원을 통한 창업기업 배출 추진도 가능하다. 
 
@@ -283,8 +283,6 @@
 창립 정관에 정의된 임직원 정수는 총 40명이다.
       
 <img class="top_img" src="common/img/chap1/21-2.jpg">
-<p class="content_h4">ο 기본재산 목록</p>입증서류로 정보통신기획평가원(IITP) 내 별도 통장을 개설하여 100만 원을 예치했다.
-
 <p class="content_h4"> ο 일정과 연도별 사업 예산</p>향후일정(안)은 ▲2019년 8월 : (재)이노베이션 아카데미 사무국 구성 및 운영 ▲2019년 9월～10월 : 교육생 모집 및 선발 ▲2019년 11월 ～ : 교육기관 개소, 교육생 발대식 및 교육실시 등이다. 연도별 예산 및 사업내용은 다음과 같다.
       
 <img class="top_img" src="common/img/chap1/22-2.jpg">
@@ -295,10 +293,10 @@
 <img class="top_img" src="common/img/chap1/23-1.jpg">
 
 <p class="content_h4"> ο 이노베이션 아카데미 설립추진단 해단식</p>2019년 8월 28일, 이노베이션 아카데미 설립추진단은 공식적인 해단식을 거행했다. 서울 강남구의 ‘창고43’ 식당에서 진행된 해단식에는 이봉규 교수, 김승일 소장, 김인겸 대표, 김정 대표, 김학용 교수, 윤대균 교수, 장영승 대표, 이민석 학장, 서울시 김태희 국장, 김용진 교수 등 설립추진단과 정보통신기획평가원의 신준우 단장, 민승현 팀장 등이 참석했다. 이노베이션 아카데미 사업의 주무부처인 과학기술정보통신부 소프트웨어정책국의 노경원 국장은 중국 파견으로 최준호 과장이 대신 참석했다.
-<p align="center">< 추진단 해단식 사진 ><br/><img src="common/img/chap1/pic_1_2_6.jpg" border="1" style="margin:10px;"><img  src="common/img/chap1/pic_1_2_7.jpg" border="1" style="margin:10px;">
-<img src="common/img/chap1/pic_1_2_8.jpg" border="1" style="margin:10px;"><img src="common/img/chap1/pic_1_2_9.jpg" border="1" style="margin:10px;">
-<img src="common/img/chap1/pic_1_2_10.jpg" border="1" style="margin:10px;"><img src="common/img/chap1/pic_1_2_11.jpg" border="1" style="margin:10px;">
-<img src="common/img/chap1/pic_1_2_12.jpg" border="1" style="margin:10px;">
+<p align="center">< 추진단 해단식 사진 ><br/><img src="common/img/chap1/pic_1_2_6.jpg" border="1" class="haedan"><img  src="common/img/chap1/pic_1_2_7.jpg" border="1" class="haedan">
+<img src="common/img/chap1/pic_1_2_8.jpg" border="1" class="haedan"><img src="common/img/chap1/pic_1_2_9.jpg" border="1"class="haedan">
+<img src="common/img/chap1/pic_1_2_10.jpg" border="1" class="haedan"><img src="common/img/chap1/pic_1_2_11.jpg" border="1" class="haedan">
+<img src="common/img/chap1/pic_1_2_12.jpg" border="1" class="haedan">
     </p>
       </div>
       <div class="section3 content_menu">
