--- a/4.html
+++ b/4.html
@@ -30,13 +30,13 @@
     <p class="menu_h1" onclick="go('covid')">부록<br/>코로나19 대응</p>
       <br/>
     <span class="share_down">공유하기</span><br/><a href="https://www.addtoany.com/add_to/twitter?linkurl=http%3A%2F%2Fiawp.kr%2Findex.html" target="_blank"><img src="common/img/icon_tw.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/facebook?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_fb.jpg"></a> &nbsp;<a href="https://story.kakao.com/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_ks.jpg"></a> &nbsp;<a href="http://blog.naver.com/openapi/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_nv.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/linkedin?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_li.jpg"></a><br/><br/>
-    <span class="share_down">백서</span><br/><a href="./common/2020_iawp_v01.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
+    <span class="share_down">백서</span><br/><a href="./common/2020_iawp_v02.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
   </div>
   <div id="content"><div class="section1 content_menu"><div class="blue_bar"></div><p class="content_h1">제4장 홍보</p><p class="content_h1_title">3무(교수, 교재, 학비) 소프트웨어 교육기관</p>
       <p class="content_h2">1. IA 홍보전략</p>
       재단은 브랜드 인지도를 높이고, 향후 사업의 성공적 진행 기초를 마련하기 위해 전략적이고 집중적인 홍보 활동을 진행했다. 우선 재단의 ‘교육생 모집’을 첫 번째 목표로 하고, 그다음으로 ‘재단의 역할과 위상’을 알리는 것을 목표로 진행했다. 
 
-대외협력팀에서는 홍보목표의 효과적인 달성을 위해 온·오프라인 통합홍보 체계를 구축하여 홍보 매체와 콘텐츠를 일관되게 관리했다. 또한 소프트웨어 분야에서 혁신적 및 능동적인 교육프로그램을 운영하고 개발자 생태계 활성화를 통해 혁신성장을 지원하는 재단의 노력을 알리고자 했다. 홍보의 핵심타깃은 2030 세대였으며 타깃에 맞는 온오프라인 통합홍보(IMC) 진행으로 효과를 극대화했다.
+대외협력팀에서는 홍보목표의 효과적인 달성을 위해 온·오프라인 통합홍보 체계를 구축하여 홍보 매체와 콘텐츠를 일관되게 관리했다. 또한 소프트웨어 분야에서 혁신적 및 능동적인 교육프로그램을 운영하고 개발자 생태계 활성화를 통해 혁신성장을 지원하는 재단의 노력을 알리고자 했다. 홍보의 핵심 타깃은 대학생 및 취업 준비생이었으며, 타깃에 맞는 온오프라인 통합홍보(IMC) 진행으로 효과를 극대화했다.
 
 2019년 8월 재단 설립 이후, 약 3개월간 신문 보도 23건, 신문광고 2회, 페이스북 채널 연계 홍보(스브스뉴스 46만, 대학내일 53만, 버스광고 23개 노선/1개월), 인플루언서 홍보 등을 진행했다. 특히 42서울 교육생 모집을 위해 10월부터 11월까지 약 한 달간 집중적인 홍보를 진행한 결과 1만1,118명이 지원했으며, 재단 홈페이지 도달은 170여만 회에 달하는 성과를 이루어냈다.
       
