오탈자 수정 반영

--- a/1.html
+++ b/1.html
@@ -31,7 +31,7 @@
     <p class="menu_h1" onclick="go('covid')">부록<br/>코로나19 대응</p>
       <br/>
     <span class="share_down">공유하기</span><br/><a href="https://www.addtoany.com/add_to/twitter?linkurl=http%3A%2F%2Fiawp.kr%2Findex.html" target="_blank"><img src="common/img/icon_tw.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/facebook?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_fb.jpg"></a> &nbsp;<a href="https://story.kakao.com/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_ks.jpg"></a> &nbsp;<a href="http://blog.naver.com/openapi/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_nv.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/linkedin?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_li.jpg"></a><br/><br/>
-    <span class="share_down">백서</span><br/><a href="./common/2020_iawp_v02.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
+    <span class="share_down">백서</span><br/><a href="./common/2020_whitepaper_innovationacademy_F.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
   </div>
   <div id="content"><div class="section1 content_menu"><div class="blue_bar"></div><p class="content_h1">제1장 설립</p><p class="content_h1_title">이노베이션 아카데미(IA)</p>
  <p class="content_h2">1. 정부단계</p><p class="content_h3">1) 추진 배경</p><p class="content_h4"> ο 세 가지 배경</p>2018년 당시, 정부가 이노베이션 아카데미를 설립하고자 하는 배경은 크게 세가지였다.
@@ -63,7 +63,7 @@
 
 둘째, 미네르바 스쿨은 스타트업처럼 투자를 받아 민간에서 설립된 대학으로 자체 캠퍼스 없이 세계 7개국을 돌아다니며 인터넷 라이브 강의를 통해 학습하는 시스템이다.
 입학 자격 요건은 성적, 졸업장, 인종, 경력 불문은 물론이고 나이 제한도 없다. 응시지원서에 중·고등학교 성적증명서 외에 어떠한 시험점수도 기재할 수 없다. 미국 대학입학 자격시험인 SAT 성적이나 자기소개서 등을 요구하지 않는다. 다만 자체 입학시험(예: ‘만약 인간의 기대수명이 30세라면 무슨 일을 하겠는가’ 라는 질문을 주고 짧은 시간 안에 서술하라)을 통해 학생을 선발하고 있다. 2017년 봄학기에는 210명을 선발했는데 경쟁률은 97.1대1을 나타냈다.
-미네르바 스쿨이 온라인 라이브 강의를 도시는 샌프란시스코(미국), 서울(대한민국) 부에노스아이레스 (아르헨티나), 런던(영국), 베를린(독일), 하이데라바드(인도), 타이페이(대만)이다. 교육과정은 4년제로 예술·인문학, 계산과학, 자연과학, 사회과학, 경영 등 5개 분야를 가르치고 있다. 1년차에는 비판적 사고력, 창의적 사고력, 효과적인 소통능력, 협업능력 등을 배양하고 2년차에는 교수의 조언을 통해 본인의 적성에 맞는 전공을 선택한다. 복수전공도 가능하다. 3년차에는 캡스톤 프로젝트를 시작해서 미네르바 이후 전문적인 삶을 준비한다. 4년차에는 캡스톤 프로젝트 완성 및 결과물을 교수진, 동료 학생 외부 사람들에게 발표한다. 교육방법은 온라인 라이브 강의(강의 당 약 20명 이하의 학생으로 구성)를 통해 교수와 학생들이 서로의 얼굴을 보며 질문과 답변하는 쌍방향 소통식이다. 비용은 연간 약 3,000만 원 정도이다. (2017~2018학년도 기준)
+미네르바 스쿨이 온라인 라이브 강의를 하는 도시는 샌프란시스코(미국), 서울(대한민국) 부에노스아이레스 (아르헨티나), 런던(영국), 베를린(독일), 하이데라바드(인도), 타이페이(대만)이다. 교육과정은 4년제로 예술·인문학, 계산과학, 자연과학, 사회과학, 경영 등 5개 분야를 가르치고 있다. 1년차에는 비판적 사고력, 창의적 사고력, 효과적인 소통능력, 협업능력 등을 배양하고 2년차에는 교수의 조언을 통해 본인의 적성에 맞는 전공을 선택한다. 복수전공도 가능하다. 3년차에는 캡스톤 프로젝트를 시작해서 미네르바 이후 전문적인 삶을 준비한다. 4년차에는 캡스톤 프로젝트 완성 및 결과물을 교수진, 동료 학생 외부 사람들에게 발표한다. 교육방법은 온라인 라이브 강의(강의 당 약 20명 이하의 학생으로 구성)를 통해 교수와 학생들이 서로의 얼굴을 보며 질문과 답변하는 쌍방향 소통식이다. 비용은 연간 약 3,000만 원 정도이다. (2017~2018학년도 기준)
 
 <img class="top_img" src="common/img/chap1/5-1.jpg">
 
