--- a/3.html
+++ b/3.html
@@ -28,7 +28,7 @@
     <p class="menu_h1" onclick="go('covid')">부록<br/>코로나19 대응</p>
       <br/>
     <span class="share_down">공유하기</span><br/><a href="https://www.addtoany.com/add_to/twitter?linkurl=http%3A%2F%2Fiawp.kr%2Findex.html" target="_blank"><img src="common/img/icon_tw.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/facebook?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_fb.jpg"></a> &nbsp;<a href="https://story.kakao.com/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_ks.jpg"></a> &nbsp;<a href="http://blog.naver.com/openapi/share?url=http%3A%2F%2Fiawp%2Ekr" target="_blank"><img src="common/img/icon_nv.jpg"></a> &nbsp;<a href="https://www.addtoany.com/add_to/linkedin?linkurl=http%3A%2F%2Fiawp.kr%2F" target="_blank"><img src="common/img/icon_li.jpg"></a><br/><br/>
-    <span class="share_down">백서</span><br/><a href="./common/2020_iawp_v02.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
+    <span class="share_down">백서</span><br/><a href="./common/2020_whitepaper_innovationacademy_F.pdf" target="_blank"><img src="common/img/icon_pdf.jpg"></a>
   </div>
   <div id="content"><div class="section1 content_menu"><div class="blue_bar"></div><p class="content_h1">제3장 사업</p><p class="content_h1_title">3가지 사업</p>
       <p class="content_h2">1. 42서울</p><p class="content_h3">1) 준비</p><p class="content_h3">(1) 계약 전 진행 상황</p><p class="content_h4">ο 에꼴42 방문</p>이민석 학장은 학장에 선임된 후, 취임 전인 2019년 7월 7일 ~ 12일까지 5일 동안, ‘이노베이션 아카데미 소프트웨어 혁신 교육 프로그램 도입을 위한 협상단’을 구성하여, 프랑스 파리의 ‘에꼴42’, 42 네트워크의 교육기관인 리옹의 ‘LE101’, 벨기에 브뤼셀의 ‘Code19’를 방문했다. 협상단은 이민석 학장 선정자를 비롯하여 유관부처 및 기관 관계자와 업계 전문가 등 총 6명으로 구성됐다
